hphp/hack/test/typecheck/new_inference/eager_solve/lambda_eager_solve.php.like_types.exp
File "lambda_eager_solve.php", line 12, characters 7-74:
Cannot determine types of lambda parameters in strict mode. Please add type hints on parameters. (Typing[4224])
